{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 263,
  "lineage": "1abd20c7-594c-3541-165f-b7b03469ca08",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/regions/europe-west1/instanceGroups/web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-20T05:31:56.787-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "G-D2-KIeD38=",
            "generated_id": 5645641978604567843,
            "health_checks": [
              "projects/alperenokur-sandbox-415013/global/healthChecks/website-lb-hc-default"
            ],
            "id": "projects/alperenokur-sandbox-415013/global/backendServices/website-lb",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "website-lb",
            "port_name": "http",
            "project": "alperenokur-sandbox-415013",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/backendServices/website-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_negs",
            "module.managed_instance_group.google_compute_instance_template.tpl",
            "module.managed_instance_group.google_compute_region_instance_group_manager.mig",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.162.184",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-20T05:30:47.274-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/alperenokur-sandbox-415013/global/addresses/website-lb",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "website-lb",
            "prefix_length": 0,
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/addresses/website-lb",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 8252177572356569844,
            "id": "projects/alperenokur-sandbox-415013/global/forwardingRules/website-lb-http",
            "ip_address": "34.111.162.184",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "website-lb-http",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/forwardingRules/website-lb-http",
            "target": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/targetHttpProxies/website-lb-http-proxy"
          },
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_global_address.lb_ip",
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_negs",
            "module.load_balancer.google_compute_target_http_proxy.http_proxy",
            "module.load_balancer.google_compute_url_map.https_redirect",
            "module.load_balancer.google_compute_url_map.url_map",
            "module.managed_instance_group.google_compute_instance_template.tpl",
            "module.managed_instance_group.google_compute_region_instance_group_manager.mig",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T05:33:03.343-08:00",
            "fingerprint": "WZyeY0RQFxI=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/alperenokur-sandbox-415013/global/targetHttpProxies/website-lb-http-proxy",
            "name": "website-lb-http-proxy",
            "project": "alperenokur-sandbox-415013",
            "proxy_bind": false,
            "proxy_id": 718858360270764768,
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/targetHttpProxies/website-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/urlMaps/website-lb-load-balancer"
          },
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_negs",
            "module.load_balancer.google_compute_url_map.https_redirect",
            "module.load_balancer.google_compute_url_map.url_map",
            "module.managed_instance_group.google_compute_instance_template.tpl",
            "module.managed_instance_group.google_compute_region_instance_group_manager.mig",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T05:30:47.124-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "srLm0CCScaA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/alperenokur-sandbox-415013/global/urlMaps/website-lb-https-redirect",
            "map_id": 219375628208717160,
            "name": "website-lb-https-redirect",
            "path_matcher": [],
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/urlMaps/website-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T05:32:51.149-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/backendServices/website-lb",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Ll_v5uxu5BY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/alperenokur-sandbox-415013/global/urlMaps/website-lb-load-balancer",
            "map_id": 331959116312492781,
            "name": "website-lb-load-balancer",
            "path_matcher": [],
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/urlMaps/website-lb-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_negs",
            "module.managed_instance_group.google_compute_instance_template.tpl",
            "module.managed_instance_group.google_compute_region_instance_group_manager.mig",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T05:30:58.918-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alperenokur-sandbox-415013/global/firewalls/website-vpc-allow-health-check",
            "log_config": [],
            "name": "website-vpc-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "params": [],
            "priority": 1000,
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/firewalls/website-vpc-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-all-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-01-20T05:30:59.179-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alperenokur-sandbox-415013/global/firewalls/allow-all-egress",
            "log_config": [],
            "name": "allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "params": [],
            "priority": 1000,
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/firewalls/allow-all-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-all-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-01-20T05:30:58.975-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alperenokur-sandbox-415013/global/firewalls/allow-all-ingress",
            "log_config": [],
            "name": "allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "params": [],
            "priority": 1000,
            "project": "alperenokur-sandbox-415013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/firewalls/allow-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.9.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-20T05:30:59.035-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/alperenokur-sandbox-415013/global/addresses/website-vpc-private-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "website-vpc-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "prefix_length": 16,
            "project": "alperenokur-sandbox-415013",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/addresses/website-vpc-private-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "mtu": 1460,
            "name": "website-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1260773118654430568",
            "numeric_id": "1260773118654430568",
            "project": "alperenokur-sandbox-415013",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "website-subnet",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-01-20T05:30:59.270-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/alperenokur-sandbox-415013/regions/europe-west1/subnetworks/website-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "website-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/global/networks/website-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alperenokur-sandbox-415013",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alperenokur-sandbox-415013/regions/europe-west1/subnetworks/website-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4644883369929358716
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}